IFS-2418 Add full-stops to error summarys

--- a/ifs-web-service/ifs-application-service/src/main/resources/templates/login/reset-password-form.html
+++ b/ifs-web-service/ifs-application-service/src/main/resources/templates/login/reset-password-form.html
@@ -12,7 +12,7 @@
     <th:block th:insert="fragments/layout :: main-content-start" />
 
     <div th:if="${#fields.hasErrors('${resetPasswordForm.*}')}" class="error-summary" role="alert" aria-labelledby="error-summary-heading" tabindex="-1">
-        <h2 class="heading-medium error-summary-heading"  id="error-summary-heading">We are unable to reset your password</h2>
+        <h2 class="heading-medium error-summary-heading"  id="error-summary-heading">We are unable to reset your password.</h2>
         <th:block th:insert="fragments/elements :: error-summary-list(resetPasswordForm)" />
     </div>
 
