--- a/ifs-web-service/ifs-application-service/src/main/resources/templates/registration/organisation/lead-organisation-type.html
+++ b/ifs-web-service/ifs-application-service/src/main/resources/templates/registration/organisation/lead-organisation-type.html
@@ -13,7 +13,7 @@
     <th:block th:insert="fragments/layout :: header-sub" th:with="linkTitle='Back',linkClass='link-back',linkUrl='/competition/search',currentApplication=${currentApplication},javascriptBackLink=true" />
 
     <div th:if="${#fields.hasErrors('${organisationForm.organisationTypeId}')}" class="error-summary" role="alert" aria-labelledby="error-summary-heading" tabindex="-1">
-      <h2 class="heading-medium error-summary-heading" id="error-summary-heading">We were unable to save your changes</h2>
+      <h2 class="heading-medium error-summary-heading" id="error-summary-heading">We were unable to save your changes.</h2>
       <ul class="error-summary-list">
           <li th:each="err : ${#fields.detailedErrors('${organisationForm.organisationTypeId}')}">
               <th:block th:if="${err.fieldName != null && err.fieldName == ''}" th:text="${err.message}">The error message</th:block>
