--- a/ifs-web-service/ifs-competition-mgt-service/src/main/resources/templates/competition/finances.html
+++ b/ifs-web-service/ifs-competition-mgt-service/src/main/resources/templates/competition/finances.html
@@ -14,7 +14,7 @@
     <th:block th:insert="fragments/layout :: header-sub" th:with="linkTitle='Application',linkClass='link-back',linkUrl=@{/competition/setup/{compId}/section/application/landing-page(compId = ${model.general.competition.id})}" />
 
     <div th:if="${#fields.hasErrors('${competitionSetupForm.*}')}" class="error-summary" role="alert" aria-labelledby="error-summary-heading" tabindex="-1">
-        <h2 class="heading-medium error-summary-heading" id="error-summary-heading">Unable to save section</h2>
+        <h2 class="heading-medium error-summary-heading" id="error-summary-heading">Unable to save section.</h2>
         <th:block th:insert="fragments/elements :: error-summary-list(competitionSetupForm)" />
     </div>
 
