--- a/ifs-web-service/ifs-assessment-service/src/main/resources/templates/assessment/assessment-invitation.html
+++ b/ifs-web-service/ifs-assessment-service/src/main/resources/templates/assessment/assessment-invitation.html
@@ -13,7 +13,7 @@
             <th:block th:insert="fragments/assessment :: assessment-header-sub (linkTitle='Back to your competition dashboard',linkClass='link-back',linkUrl=@{/assessor/dashboard/competition/{competitionId}(competitionId=${model.competitionId})})" />
 
             <div th:if="${#fields.hasErrors('${form.*}')}" class="error-summary" role="alert" aria-labelledby="error-summary-heading" tabindex="-1">
-                <h2 class="heading-medium error-summary-heading" id="error-summary-heading">We were unable to save your changes</h2>
+                <h2 class="heading-medium error-summary-heading" id="error-summary-heading">We were unable to save your changes.</h2>
                 <th:block th:insert="fragments/elements :: error-summary-list(form)" />
             </div>
 
