--- a/ifs-web-service/ifs-assessment-service/src/main/resources/templates/assessor-competition-dashboard.html
+++ b/ifs-web-service/ifs-assessment-service/src/main/resources/templates/assessor-competition-dashboard.html
@@ -14,7 +14,7 @@
             <th:block th:insert="fragments/assessment :: assessment-header-sub (linkTitle='Assessor dashboard',linkClass='link-back',linkUrl=@{/assessor/dashboard})" />
 
             <div th:if="${#fields.hasErrors('${form.*}')}" class="error-summary" role="alert" aria-labelledby="error-summary-heading" tabindex="-1">
-                <h2 class="heading-medium error-summary-heading" id="error-summary-heading">There was a problem submitting some of your assessments</h2>
+                <h2 class="heading-medium error-summary-heading" id="error-summary-heading">There was a problem submitting some of your assessments.</h2>
                 <ul class="error-summary-list">
                     <li th:each="err : ${#fields.detailedErrors('${form.*}')}">
                         <th:block th:if="${err.global}" th:text="${err.message}">Non-field specific message</th:block>
