--- a/ifs-web-service/ifs-assessment-service/src/main/resources/templates/fragments/assessment.html
+++ b/ifs-web-service/ifs-assessment-service/src/main/resources/templates/fragments/assessment.html
@@ -125,7 +125,7 @@
     <form action="#" th:action="@{/{assessmentId}/reject(assessmentId=${assessmentId})}" method="post" th:object="${form}" novalidate="novalidate">
         <h2 class="heading-medium no-margin">Reject assessment</h2>
         <div class="error-summary" th:if="${#fields.hasErrors('global')}">
-            <h2 class="heading-medium error-summary-heading">We were unable to reject the assessment:</h2>
+            <h2 class="heading-medium error-summary-heading">We were unable to reject the assessment.</h2>
             <ul class="error-summary-list">
                 <li th:each="err : ${#fields.errors('global')}" th:text="${err}"></li>
             </ul>
