--- a/ifs-web-service/ifs-assessment-service/src/main/resources/templates/profile/declaration-of-interest-edit.html
+++ b/ifs-web-service/ifs-assessment-service/src/main/resources/templates/profile/declaration-of-interest-edit.html
@@ -13,7 +13,7 @@
             <th:block th:insert="fragments/layout :: header-sub" th:with="linkTitle='Declaration of interest',linkClass='link-back',linkUrl=@{/profile/declaration}" />
 
             <div th:if="${#fields.hasErrors('${form.*}')}" class="error-summary" role="alert" data-ignore-errors="true" aria-labelledby="error-summary-heading" tabindex="-1">
-              <h2 class="heading-medium error-summary-heading">We were unable to save your changes</h2>
+              <h2 class="heading-medium error-summary-heading">We were unable to save your changes.</h2>
               <p>Please correct the errors in the form below.</p>
             </div>
               <th:block th:insert="fragments/layout :: page-title" th:with="pageTitle='Edit your declaration of interest',size='heading-xlarge extra-margin-bottom'" />
