--- a/ifs-web-service/ifs-assessment-service/src/main/resources/templates/profile/innovation-areas.html
+++ b/ifs-web-service/ifs-assessment-service/src/main/resources/templates/profile/innovation-areas.html
@@ -13,7 +13,7 @@
             <th:block th:insert="fragments/layout :: header-sub" th:with="linkTitle='Back to your assessor dashboard',linkClass='link-back',linkUrl=@{/assessor/dashboard}" />
 
             <div class="error-summary" th:if="${#fields.hasErrors('${form.*}')}">
-                <h2 class="heading-medium error-summary-heading">We were unable to save your changes</h2>
+                <h2 class="heading-medium error-summary-heading">We were unable to save your changes.</h2>
                 <ul class="error-summary-list">
                     <li th:each="err : ${#fields.errors('${form.*}')}" th:text="${err}"></li>
                 </ul>
