--- a/ifs-web-service/ifs-assessment-service/src/main/resources/templates/registration/register.html
+++ b/ifs-web-service/ifs-assessment-service/src/main/resources/templates/registration/register.html
@@ -13,7 +13,7 @@
             <th:block th:insert="fragments/layout :: header-sub" th:with="linkTitle='Back',linkClass='link-back',linkUrl='/competition/search',currentApplication=${currentApplication},javascriptBackLink=true" />
 
             <div th:if="${#fields.hasErrors('${form.*}')}" class="error-summary" role="alert" aria-labelledby="error-summary-heading" tabindex="-1">
-                <h2 class="heading-medium error-summary-heading" id="error-summary-heading">We were unable to create your account</h2>
+                <h2 class="heading-medium error-summary-heading" id="error-summary-heading">We were unable to create your account.</h2>
                 <th:block th:insert="fragments/elements :: error-summary-list(form)" />
             </div>
 
