--- a/ifs-web-service/ifs-competition-mgt-service/src/main/resources/templates/admin/edit-user.html
+++ b/ifs-web-service/ifs-competition-mgt-service/src/main/resources/templates/admin/edit-user.html
@@ -16,7 +16,7 @@
 
 
     <div th:if="${#fields.hasErrors('${form.*}')}" class="error-summary" role="alert" aria-labelledby="error-summary-heading" tabindex="-1">
-        <h2 class="heading-medium error-summary-heading" id="error-summary-heading">We were unable to update internal user's details</h2>
+        <h2 class="heading-medium error-summary-heading" id="error-summary-heading">We were unable to update internal user's details.</h2>
         <th:block th:insert="fragments/elements :: error-summary-list(form)" />
     </div>
 
