--- a/ifs-web-service/ifs-competition-mgt-service/src/main/resources/templates/registration/register.html
+++ b/ifs-web-service/ifs-competition-mgt-service/src/main/resources/templates/registration/register.html
@@ -12,7 +12,7 @@
     <th:block th:insert="fragments/layout :: main-content-start"/>
 
     <div class="error-summary" th:if="${#fields.hasErrors('${form.*}')}">
-        <h2 class="heading-medium error-summary-heading">We were unable to create your account</h2>
+        <h2 class="heading-medium error-summary-heading">We were unable to create your account.</h2>
         <ul class="error-summary-list">
             <li th:each="err : ${#fields.errors('${form.*}')}" th:text="${err}"></li>
         </ul>
