--- a/ifs-web-service/ifs-project-setup-mgt-service/src/main/resources/templates/project/change-bank-details.html
+++ b/ifs-web-service/ifs-project-setup-mgt-service/src/main/resources/templates/project/change-bank-details.html
@@ -15,7 +15,7 @@
     <th:block th:insert="fragments/layout :: header-sub" th:with="linkTitle='Review bank details',linkClass='link-back',linkUrl=@{/project/{projectId}/organisation/{organisationId}/review-bank-details(projectId=${model.projectId},organisationId=${model.organisationId})}" />
 
     <div th:if="${#fields.hasErrors('${form.*}')}" class="error-summary" role="alert" aria-labelledby="error-summary-heading" tabindex="-1">
-        <h2 class="heading-medium error-summary-heading" id="error-summary-heading">We are unable to save your bank account details:</h2>
+        <h2 class="heading-medium error-summary-heading" id="error-summary-heading">We are unable to save your bank account details.</h2>
         <th:block th:insert="fragments/elements :: error-summary-list(form)" />
     </div>
 
