--- a/ifs-web-service/ifs-project-setup-service/src/main/resources/templates/project/bank-details.html
+++ b/ifs-web-service/ifs-project-setup-service/src/main/resources/templates/project/bank-details.html
@@ -14,7 +14,7 @@
   <th:block th:insert="fragments/layout :: header-sub" th:with="linkTitle='Project setup status',linkClass='link-back',linkUrl=@{/project/{id}(id=${project.id})}" />
 
   <div th:if="${#fields.hasErrors('${form.*}')}" class="error-summary" role="alert" aria-labelledby="error-summary-heading" tabindex="-1">
-      <h2 class="heading-medium error-summary-heading" id="error-summary-heading">We are unable to save your bank account details:</h2>
+      <h2 class="heading-medium error-summary-heading" id="error-summary-heading">We are unable to save your bank account details.</h2>
       <th:block th:insert="fragments/elements :: error-summary-list(form)" />
       <!-- /* only show underneath messages if there are global errors, which in this case are experian errors.
               Stub values for the inputs can be found in bank details acceptance tests. */-->
