--- a/ifs-web-service/ifs-project-setup-mgt-service/src/main/resources/templates/project/competition-pending-bank-details.html
+++ b/ifs-web-service/ifs-project-setup-mgt-service/src/main/resources/templates/project/competition-pending-bank-details.html
@@ -13,7 +13,7 @@
 
     <div class="grid-row">
         <div class="column-two-thirds">
-            <th:block th:insert="fragments/layout :: page-title" th:with="pageTitle='Bank details',subTitle=|Project setup|,size='heading-xlarge'" />
+            <th:block th:insert="fragments/layout :: page-title" th:with="pageTitle='Review bank details',subTitle=|Project setup|,size='heading-xlarge'" />
         </div>
     </div>
 
