--- a/ifs-web-service/ifs-assessment-service/src/main/resources/templates/assessor-dashboard.html
+++ b/ifs-web-service/ifs-assessment-service/src/main/resources/templates/assessor-dashboard.html
@@ -145,45 +145,47 @@
                 </div>
             </div>
 
-            <div class="assessment-panel-invites" th:unless="${#lists.isEmpty(model.assessmentPanelAccepted)}">
-                <div class="progress-list"><h2 class="heading-medium">Attend panel (<span
-                    th:text="${#lists.size(model.assessmentPanelAccepted)}"/>)</h2>
-                    <ul>
-                        <li th:each="assessmentPanelAccept : ${model.assessmentPanelAccepted}" class="status-2-col">
-                            <div class="task">
-                                <h3 class="heading-small">
-                                    <a th:href="@{/assessor/dashboard/competition/{competitionId}(competitionId=${assessmentPanelAccept.competitionId})}"
-                                       th:text="${assessmentPanelAccept.competitionName}"/>
-                                </h3>
+            <div class="assessment-panel-invites">
+                <th:block th:unless="${#lists.isEmpty(model.assessmentPanelAccepted)}">
+                    <div class="progress-list"><h2 class="heading-medium">Attend panel (<span
+                        th:text="${#lists.size(model.assessmentPanelAccepted)}"/>)</h2>
+                        <ul>
+                            <li th:each="assessmentPanelAccept : ${model.assessmentPanelAccepted}">
+                                <div class="task">
+                                    <h3 class="heading-small">
+                                        <a th:href="@{/assessor/dashboard/competition/{competitionId}(competitionId=${assessmentPanelAccept.competitionId})}"
+                                           th:text="${assessmentPanelAccept.competitionName}"/>
+                                    </h3>
 
-                                <div th:if="${assessmentPanelAccept.awaitingApplications == 0}">
-                                    <strong>
-                                        0 applications awaiting review | applications to be added soon
-                                    </strong>
-                                </div>
+                                    <div th:if="${assessmentPanelAccept.awaitingApplications == 0}" class="action-required">
+                                        <strong>
+                                            0 applications awaiting review | applications to be added soon
+                                        </strong>
+                                    </div>
 
-                                <div th:if="${assessmentPanelAccept.awaitingApplications > 0}" class="action-required">
-                                    <strong>
-                                            <span th:text="${assessmentPanelAccept.awaitingApplications}" class="accepted-applications">
-                                                COUNT
-                                            </span> applications awaiting review
-                                    </strong>
-                                </div>
+                                    <div th:if="${assessmentPanelAccept.awaitingApplications > 0}" class="action-required">
+                                        <strong>
+                                <span th:text="${assessmentPanelAccept.awaitingApplications}" class="accepted-applications">
+                                    COUNT
+                                </span> applications awaiting review
+                                        </strong>
+                                    </div>
 
-                                <div class="status">
-                                    <div class="status-msg msg-deadline">
-                                        <strong class="bold-medium days-remaining" th:text="${assessmentPanelAccept.daysLeft}"></strong>
-                                        <br />
-                                        days left <br />
-                                        Deadline
-                                        <span class="day" th:text="${#temporals.day(assessmentPanelAccept.panelDateDeadline)}">END DAY</span>
-                                        <span class="month" th:text="${#temporals.monthName(assessmentPanelAccept.panelDateDeadline)}">END MONTH</span>
+                                    <div class="status">
+                                        <div class="status-msg msg-deadline">
+                                            <strong class="bold-medium days-remaining" th:text="${assessmentPanelAccept.daysLeft}"></strong>
+                                            <br />
+                                            days left <br />
+                                            Deadline
+                                            <span class="day" th:text="${#temporals.day(assessmentPanelAccept.panelDateDeadline)}">END DAY</span>
+                                            <span class="month" th:text="${#temporals.monthName(assessmentPanelAccept.panelDateDeadline)}">END MONTH</span>
+                                        </div>
                                     </div>
                                 </div>
-                            </div>
-                        </li>
-                    </ul>
-                </div>
+                            </li>
+                        </ul>
+                    </div>
+                </th:block>
             </div>
 
             <div class="assessment-panel-invites" th:unless="${#lists.isEmpty(model.assessmentPanelInvites)}">
