IFS-1566 added comment for link

--- a/ifs-web-service/ifs-assessment-service/src/main/resources/templates/assessor-dashboard.html
+++ b/ifs-web-service/ifs-assessment-service/src/main/resources/templates/assessor-dashboard.html
@@ -147,12 +147,13 @@
 
             <div class="assessment-panel-invites">
                 <th:block th:unless="${#lists.isEmpty(model.assessmentPanelAccepted)}">
-                    <div class="progress-list"><h2 class="heading-medium">Attend panel (<span
+                    <div class="progress-list"><h2 class="heading-medium no-margin-top">Attend panel (<span
                         th:text="${#lists.size(model.assessmentPanelAccepted)}"/>)</h2>
                         <ul>
                             <li th:each="assessmentPanelAccept : ${model.assessmentPanelAccepted}">
                                 <div class="task">
                                     <h3 class="heading-small">
+                                        <!--link needs changing-->
                                         <a th:href="@{/assessor/dashboard/competition/{competitionId}(competitionId=${assessmentPanelAccept.competitionId})}"
                                            th:text="${assessmentPanelAccept.competitionName}"/>
                                     </h3>
@@ -170,6 +171,7 @@
                                 </span> applications awaiting review
                                         </strong>
                                     </div>
+                                </div>
 
                                     <div class="status">
                                         <div class="status-msg msg-deadline">
@@ -181,7 +183,7 @@
                                             <span class="month" th:text="${#temporals.monthName(assessmentPanelAccept.panelDateDeadline)}">END MONTH</span>
                                         </div>
                                     </div>
-                                </div>
+
                             </li>
                         </ul>
                     </div>
