--- a/ifs-web-service/ifs-project-setup-service/src/main/resources/templates/project/finance-contact.html
+++ b/ifs-web-service/ifs-project-setup-service/src/main/resources/templates/project/finance-contact.html
@@ -45,6 +45,20 @@
                         <div class="multiple-choice" th:each="user : ${model.invitedUsers}">
                             <input type="radio" th:field="*{financeContact}" th:value="${user.id}" th:attr="disabled=${user.status != 'EXISTING'} ? 'disabled' : null,data-required-errormessage=#{validation.financecontactform.financecontact.required}" required="required" />
                             <label data-set-section-valid="#finance-contact-section" data-clear-inputs="#name-finance-contact,#email-finance-contact" th:for="${#ids.prev('financeContact')}" th:text="${user.name}">Username</label>
+                            <button
+                                    th:value="${user.id}"
+                                    class="buttonlink"
+                                    name="resend_fc_invite"
+                                    type="submit">
+                                Resend
+                            </button>
+                            <button
+                                th:value="${user.id}"
+                                class="buttonlink"
+                                name="remove_fc_invite"
+                                type="submit">
+                                Remove invite
+                            </button>
                         </div>
 
                         <div class="multiple-choice" data-target="finance-contact-table">
