--- a/ifs-web-service/ifs-competition-mgt-service/src/main/resources/templates/assessors/invite.html
+++ b/ifs-web-service/ifs-competition-mgt-service/src/main/resources/templates/assessors/invite.html
@@ -12,6 +12,14 @@
             <th:block th:insert="fragments/layout :: main-content-start" />
             <th:block th:insert="fragments/layout :: header-sub" th:with="linkTitle='Competition',linkClass='link-back',linkUrl=@{/competition/{competitionId}(competitionId=${model.competitionId})}" />
 
+            <div th:if="${#fields.hasErrors('${form.*}')}" class="error-summary" role="alert" aria-labelledby="error-summary-heading" tabindex="-1">
+                <h2 class="heading-medium error-summary-heading"  id="error-summary-heading">There is a problem on this page.</h2>
+
+                <ul class="error-summary-list">
+                    <!-- We need a list of errors here -->
+                </ul>
+            </div>
+
             <th:block th:insert="fragments/layout :: page-title" th:with="pageTitle='Invite assessors',subTitle=${model.competitionName},size='heading-xlarge'" />
             <h2 class="heading-medium">Key statistics</h2>
 
@@ -109,7 +117,7 @@
                                 </optgroup>
                             </select>
                         </div>
-
+                        <!-- TODO {#fields.hasErrors('invites')} does not work -->
                         <div class="form-group" th:classappend="${#fields.hasErrors('invites')} ? 'form-group-error'">
                             <th:block th:if="${#fields.hasErrors('invites')}">
                                 <span class="error-message" th:each="err : ${#fields.errors('invites')}" th:text="${err}"></span>
