--- a/ifs-web-service/ifs-competition-mgt-service/src/main/resources/templates/competition/setup/question.html
+++ b/ifs-web-service/ifs-competition-mgt-service/src/main/resources/templates/competition/setup/question.html
@@ -13,6 +13,21 @@
 
     <th:block th:insert="fragments/layout :: header-sub" th:with="linkTitle='All competitions',linkClass='link-back',linkUrl=@{/dashboard},currentApplication=${currentApplication}" th:if="${model.general.currentSectionIsHome()}" />
     <th:block th:insert="fragments/layout :: header-sub" th:with="linkTitle='Application',linkClass='link-back',linkUrl=@{/competition/setup/{competitionId}/section/application/landing-page(competitionId=${model.general.competition.id})}" th:unless="${model.general.currentSectionIsHome()}" />
+
+    <div th:if="${#fields.hasErrors('${competitionSetupForm.*}')}" class="error-summary" role="alert" aria-labelledby="error-summary-heading" tabindex="-1">
+        <h2 class="heading-medium error-summary-heading"  id="error-summary-heading">There is a problem on this page.</h2>
+
+        <ul class="error-summary-list">
+            <li th:each="err : ${#fields.detailedErrors('${competitionSetupForm.*}')}">
+                <th:block th:if="${err.global || err.fieldName == 'formInput[cost]'}" th:text="${err.message}">Non-field specific message</th:block>
+                <th:block th:unless="${err.global || err.fieldName == 'formInput[cost]'}">
+                    <th:block th:if="${err.fieldName != null && err.fieldName == ''}" th:text="${err.message}">The error message</th:block>
+                    <a th:unless="${#strings.isEmpty(err.fieldName)}" th:href="|#${err.fieldName}|" th:text="${err.message}">The error message</a>
+                </th:block>
+            </li>
+        </ul>
+    </div>
+
     <th:block th:insert="fragments/layout :: page-title" th:with="pageTitle=${#strings.isEmpty(competitionSetupForm.question.shortTitle)} ? #{ifs.application.question.no_heading} : ${competitionSetupForm.question.shortTitle},subTitle=${competitionName},size='heading-xlarge'" />
 
     <p class="extra-margin" th:unless="${model.general.state.preventEdit}">
