--- a/ifs-web-service/ifs-project-setup-mgt-service/src/main/resources/templates/project/monitoring-officer.html
+++ b/ifs-web-service/ifs-project-setup-mgt-service/src/main/resources/templates/project/monitoring-officer.html
@@ -13,6 +13,19 @@
         <th:block th:insert="fragments/layout :: main-content-start" />
         <th:block th:insert="fragments/layout :: header-sub" th:with="linkTitle='Projects in setup',linkClass='link-back',linkUrl=@{/competition/{id}/status (id=${model.competitionSummary.competitionId})}" />
 
+        <div th:if="${#fields.hasErrors('${form.*}')}" class="error-summary" role="alert" aria-labelledby="error-summary-heading" tabindex="-1">
+            <h2 class="heading-medium error-summary-heading"  id="error-summary-heading">Please check this page.</h2>
+            <ul class="error-summary-list">
+                <li th:each="err : ${#fields.detailedErrors('${form.*}')}">
+                    <th:block th:if="${err.global || err.fieldName == 'formInput[cost]'}" th:text="${err.message}">Non-field specific message</th:block>
+                    <th:block th:unless="${err.global || err.fieldName == 'formInput[cost]'}">
+                        <th:block th:if="${err.fieldName != null && err.fieldName == ''}" th:text="${err.message}">The error message</th:block>
+                        <a th:unless="${#strings.isEmpty(err.fieldName)}" th:href="|#${err.fieldName}|" th:text="${err.message}">The error message</a>
+                    </th:block>
+                </li>
+            </ul>
+        </div>
+
         <div class="grid-row">
             <div class="column-two-thirds">
                 <th:block th:with="competitionTitle=${#strings.isEmpty(model.competitionSummary.competitionName)} ? |${model.competitionSummary.competitionId} : $#{ifs.competition.no_title}| : |${model.competitionSummary.competitionId} : ${model.competitionSummary.competitionName}|">
@@ -43,7 +56,17 @@
                             <span class="error-message" th:each="err : ${#fields.errors('firstName')}" th:text="${err}"></span>
                         </th:block>
                     </label>
-                    <input type="text" pattern="\D{2,}" minlength="2" maxlength="70" th:errorclass="form-control-error" required="required" th:attr="data-required-errormessage=#{validation.standard.firstname.required},data-pattern-errormessage=#{validation.standard.firstname.invalid},data-minlength-errormessage=#{validation.standard.firstname.length.min(null,null,2)}" class="form-control width-full" th:readonly="${readonly}" th:field="*{firstName}" />
+                    <input id="firstName"
+                           type="text"
+                           pattern="\D{2,}"
+                           minlength="2"
+                           maxlength="70"
+                           th:errorclass="form-control-error" r
+                           equired="required"
+                           th:attr="data-required-errormessage=#{validation.standard.firstname.required},data-pattern-errormessage=#{validation.standard.firstname.invalid},data-minlength-errormessage=#{validation.standard.firstname.length.min(null,null,2)}"
+                           class="form-control width-full"
+                           th:readonly="${readonly}"
+                           th:field="*{firstName}" />
                 </div>
 
                 <div class="form-group" th:classappend="${#fields.hasErrors('lastName')} ? 'form-group-error'">
@@ -53,7 +76,17 @@
                             <span class="error-message" th:each="err : ${#fields.errors('lastName')}" th:text="${err}"></span>
                         </th:block>
                     </label>
-                    <input type="text" pattern="\D{2,}" minlength="2" maxlength="70"  th:errorclass="form-control-error" required="required" th:attr="data-required-errormessage=#{validation.standard.lastname.required},data-pattern-errormessage=#{validation.standard.lastname.invalid},data-minlength-errormessage=#{validation.standard.lastname.length.min(null,null,2)}" class="form-control width-full" th:readonly="${readonly}" th:field="*{lastName}" />
+                    <input id="lastName"
+                           type="text"
+                           pattern="\D{2,}"
+                           minlength="2"
+                           maxlength="70"
+                           th:errorclass="form-control-error"
+                           required="required"
+                           th:attr="data-required-errormessage=#{validation.standard.lastname.required},data-pattern-errormessage=#{validation.standard.lastname.invalid},data-minlength-errormessage=#{validation.standard.lastname.length.min(null,null,2)}"
+                           class="form-control width-full"
+                           th:readonly="${readonly}"
+                           th:field="*{lastName}" />
                 </div>
 
                 <div class="form-group" th:classappend="${#fields.hasErrors('emailAddress')} ? 'form-group-error'">
@@ -63,7 +96,14 @@
                             <span class="error-message" th:each="err : ${#fields.errors('emailAddress')}" th:text="${err}"></span>
                         </th:block>
                     </label>
-                    <input type="email" th:errorclass="form-control-error" required="required" th:attr="data-required-errormessage=#{validation.invite.email.required}" class="form-control width-full" th:readonly="${readonly}" th:field="*{emailAddress}" />
+                    <input id="emailAddress"
+                           type="email"
+                           th:errorclass="form-control-error"
+                           required="required"
+                           th:attr="data-required-errormessage=#{validation.invite.email.required}"
+                           class="form-control width-full"
+                           th:readonly="${readonly}"
+                           th:field="*{emailAddress}" />
                 </div>
 
                 <div class="form-group" th:classappend="${#fields.hasErrors('phoneNumber')} ? 'form-group-error'">
