--- a/ifs-web-service/ifs-assessment-service/src/main/resources/templates/assessor-dashboard.html
+++ b/ifs-web-service/ifs-assessment-service/src/main/resources/templates/assessor-dashboard.html
@@ -159,31 +159,25 @@
                                     </h3>
 
                                     <div th:if="${assessmentPanelAccept.awaitingApplications == 0}" class="action-required">
-                                        <strong>
-                                            0 applications awaiting review | applications to be added soon
-                                        </strong>
+                                        <strong>0 applications awaiting review | applications to be added soon</strong>
                                     </div>
 
                                     <div th:if="${assessmentPanelAccept.awaitingApplications > 0}" class="action-required">
                                         <strong>
-                                <span th:text="${assessmentPanelAccept.awaitingApplications}" class="accepted-applications">
-                                    COUNT
-                                </span> applications awaiting review
+                                            <span th:text="${assessmentPanelAccept.awaitingApplications}" class="accepted-applications">COUNT
+                                            </span> applications awaiting review
                                         </strong>
                                     </div>
                                 </div>
-
-                                    <div class="status">
-                                        <div class="status-msg msg-deadline">
-                                            <strong class="bold-medium days-remaining" th:text="${assessmentPanelAccept.daysLeft}"></strong>
-                                            <br />
-                                            days left <br />
-                                            Deadline
-                                            <span class="day" th:text="${#temporals.day(assessmentPanelAccept.panelDateDeadline)}">END DAY</span>
-                                            <span class="month" th:text="${#temporals.monthName(assessmentPanelAccept.panelDateDeadline)}">END MONTH</span>
-                                        </div>
+                                <div class="status">
+                                    <div class="status-msg msg-deadline">
+                                        <strong class="bold-medium days-remaining" th:text="${assessmentPanelAccept.daysLeft}"></strong>
+                                        <br />days left <br />
+                                        Deadline
+                                        <span class="day" th:text="${#temporals.day(assessmentPanelAccept.panelDateDeadline)}">END DAY</span>
+                                        <span class="month" th:text="${#temporals.monthName(assessmentPanelAccept.panelDateDeadline)}">END MONTH</span>
                                     </div>
-
+                                </div>
                             </li>
                         </ul>
                     </div>
