IFS-1566 Removed link to comp panel page

--- a/ifs-web-service/ifs-assessment-service/src/main/resources/templates/assessor-dashboard.html
+++ b/ifs-web-service/ifs-assessment-service/src/main/resources/templates/assessor-dashboard.html
@@ -154,7 +154,7 @@
                                 <div class="task">
                                     <h3 class="heading-small">
                                         <!--link needs changing-->
-                                        <a th:href="@{/assessor/dashboard/competition/{competitionId}(competitionId=${assessmentPanelAccept.competitionId})}"
+                                        <a class="disabled" aria-disabled="true"
                                            th:text="${assessmentPanelAccept.competitionName}"/>
                                     </h3>
 
