--- a/ifs-web-service/ifs-competition-mgt-service/src/main/resources/templates/competition/setup/question.html
+++ b/ifs-web-service/ifs-competition-mgt-service/src/main/resources/templates/competition/setup/question.html
@@ -53,9 +53,9 @@
           <a class="button-secondary" th:href="@{/competition/setup/{competitionId}/section/application(competitionId=${model.general.competition.id})}">Return to application questions</a>
         </div>
         <div class="extra-margin" th:if="${competitionSetupForm.isRemovable()}">
-            <th:form method="post" th:action="@{'/competition/setup/{competitionId}/section/application/landing-page'(competitionId=${model.general.competition.id})}" th:unless="${model.general.state.preventEdit}">
+            <form method="post" th:action="@{'/competition/setup/{competitionId}/section/application/landing-page'(competitionId=${model.general.competition.id})}" th:unless="${model.general.state.preventEdit}">
                 <button type="submit" th:value="${competitionSetupForm.question.questionId}" name="deleteQuestion" class="buttonlink no-margin">Remove question</button>
-            </th:form>
+            </form>
         </div>
     </th:block>
 
