IFS-2246 Assign applications to interview panel

--- a/ifs-web-service/ifs-application-service/src/main/resources/templates/prototypes/IFS-2252-interview-yes-no.html
+++ b/ifs-web-service/ifs-application-service/src/main/resources/templates/prototypes/IFS-2252-interview-yes-no.html
@@ -23,16 +23,16 @@
         Invitation to interview panel
     </h1>
 
-    <p>You have been invited to interview panel on <strong>27 July 2017</strong></p>
+    <p>You have been invited to the interview panel for <strong>Technology inspired</strong> on <strong>27 July 2017</strong>.</p>
 
-    <h2 class="heading-medium">Competition details: Technology inspired</h2>
+    <!-- <h2 class="heading-medium">Competition details: Technology inspired</h2> -->
 
-    <p>Innovate UK is to invest up to &pound;9 million in Technology inspired</p>
+    <p>Innovate UK is to invest up to &pound;9 million in Technology inspired.</p>
 
-    <p><a href="#">See competition brief</a></p>
+    <p>Please review the <a href="#">details of this competition</a> before the interview panel.</p>
 
     <h2 class="heading-medium">Are you able to attend the interview panel?</h2>
-    <p>You should reject this invitation if you are unavailable for the interview panel date.</p>
+    <p>You should reject this invitation if you are unavailable.</p>
     <form action="/prototypes/IFS-2253-assessor-interview-dashboard">
         <div class="form-group">
             <fieldset>
@@ -40,14 +40,14 @@
                 <div class="multiple-choice">
                     <input id="acceptCompetition" value="true" type="radio" required="required" name="acceptInvitation">
                     <label for="acceptCompetition">
-                        Yes, I am able to attend the interview panel.
+                        Yes, I am able to attend.
                     </label>
                 </div>
 
                 <div class="multiple-choice" data-target="reject-competition">
                     <input id="rejectCompetition" value="false" type="radio" required="required" name="acceptInvitation">
                     <label for="rejectCompetition">
-                        No, I am not able to attend the interview panel.
+                        No, I am not able to attend.
                     </label>
                 </div>
             </fieldset>
