--- a/ifs-web-service/ifs-application-service/src/main/resources/templates/prototypes/IFS-2253-assessor-interview-dashboard.html
+++ b/ifs-web-service/ifs-application-service/src/main/resources/templates/prototypes/IFS-2253-assessor-interview-dashboard.html
@@ -30,7 +30,7 @@
         <li><a href="#">travel and subsistence rates</a></li>
     </ul>
 
-    <div class="my-applications">
+    <div class="my-applications cf extra-margin-top">
         <div class="progress-list">
             <h2 class="heading-medium no-margin-top">Competitions for assessment (1)</h2>
             <ul>
