--- a/ifs-web-service/ifs-application-service/src/main/resources/templates/prototypes/IFS-2254-apps-for-interview.html
+++ b/ifs-web-service/ifs-application-service/src/main/resources/templates/prototypes/IFS-2254-apps-for-interview.html
@@ -21,7 +21,7 @@
 
     <h1 class="heading-xlarge">
         <span class="heading-secondary">Technology inspired</span>
-        Accepted interview to attend
+        Interviews you have agreed to attend
     </h1>
 
     <div class="grid-row">
@@ -37,6 +37,8 @@
             <a href="#">View competition brief (opens in a new window)</a>
         </div>
     </div>
+
+    <p class="extra-margin">Please click on the links below to review the applications and all feedback before the interview.</p>
 
     <div class="my-applications">
 
