IFS-2247 Assign assessors to interview panel

--- a/ifs-web-service/ifs-application-service/src/main/resources/templates/prototypes/IFS-2245-interview-panel-dashboard.html
+++ b/ifs-web-service/ifs-application-service/src/main/resources/templates/prototypes/IFS-2245-interview-panel-dashboard.html
@@ -47,7 +47,7 @@
 
         <ul class="link-list extra-margin-top">
             <li><a href="/prototypes/IFS-2246-assign-applications">Assign applications</a></li>
-            <li><a href="#">Invite assessors</a></li>
+            <li><a href="/prototypes/IFS-2247-invite-assessors">Invite assessors</a></li>
         </ul>
 
         <p class="extra-margin-top">You can allocate applications to assessors once they have responded.</p>
