--- a/ifs-web-service/ifs-competition-mgt-service/src/main/resources/templates/assessors/invite.html
+++ b/ifs-web-service/ifs-competition-mgt-service/src/main/resources/templates/assessors/invite.html
@@ -16,7 +16,7 @@
                 <h2 class="heading-medium error-summary-heading"  id="error-summary-heading">There is a problem on this page.</h2>
 
                 <ul class="error-summary-list">
-                    <!-- We need a list of errors here -->
+                    <!-- todo: We need a list of errors here -->
                 </ul>
             </div>
 
